--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>カウントデモサイト</title>
+    <h1>ようこそdemo2へ</h1>
 </head>
 
 <body>
